fix: undo J17 usage and prevent multiple config of same type [DHIS2-16695]